FlightPath 6.x Changelog
========================

2021-11-26
  Implemented multi-factor authentication (via email) for local users.  The user can also choose to have their device "remembered" for 30 days, so they are not asked to
  re-authenticate every time.  This will only work for local users with email addresses saved.  Users with no email address, or users using LDAP, SSO, etc, will not
  be prompted to enter MFA code.
  
  Added convenience string functions like str_starts_with() to misc.inc, if not included.  These are implemented in PHP 8; they are here for users not running PHP 8.
  
  Added admin email address as a required field in the initial install script for FlightPath.


2021-11-23
  Fixed bug where advising snapshot (on dashboard) wasn't taking all advisees into account, only the first 20.  Simultaneously added
  code to allow for more than 20 student results at a time.  Previously 20 was hard-coded, not a variable.

  Converted the "Contact the FlightPath Production Team" popup window into a dialog.


2021-11-19
  For the content type "schedule_unavailable_time", changed the ics url field to a textarea and text (in mysql) to be able to handle URLs longer than 255 chars.

  Fixed bug in install process where current schema of modules were not being set, causing the user to be told they need to run db updates even
  on first install.
  
  Enable almost all core modules on initial install.
  
  Modified smtp module so that if we send a blank message it will just not send (but log it) rather than show an error message.
  

2021-11-18
  Added "spinner" to submit button for duplicating an entire year of degree data.

  Watchdog page converted to use sortable table and pager query.  Also added severity as column.
  
  Fixed bug in major students progress report (wasn't paying attention to school properly)
  
  Fixed bug where if student's school wasn't set correctly, it would look it up upon object creation.
  

2021-11-16