@@ -2783,6 +2783,11 @@ function engagements_display_main()
     }
 
 
+    
+    $author_user_id = intval($content->user_id);
+    $author_account = fp_load_user($author_user_id);    
+    $author_name = $author_account->f_name . " " . $author_account->l_name;
+
     $rtn .= "<div class='activity-feed-teaser activity-feed-teaser-$direction activity-feed-teaser-type-$type'>
                 <div class='activity-header-content'>
                   <span class='header-icon'><i class='fa $icon'></i></span>
@@ -2793,7 +2798,7 @@ function engagements_display_main()
                   <span class='header-phone-outcome'>: {$content->field__direction['display_value']} $header_desc_extra</span>
                   <span class='header-edit'></span>
                   <span class='header-date-time'>" . $content->field__activity_datetime['display_value'] . "</span>                  
-                  <span class='header-author'>Richard Peacock</span>
+                  <span class='header-author'>$author_name</span>
                   <span class='header-visibility'>$visibility_icon</span>
                 </div>
                 <div class='activity-contents'>
